[package]
name = "secretkeeper"
version = "0.1.0"
edition = "2021"
description = "A simple and secure command-line tool to protect your text by encrypting and decrypting it using the robust AES-256 algorithm."
license = "MIT"
documentation = "https://docs.rs/secretkeeper"
repository = "https://github.com/kunalbagaria/secretkeeper"

[[bin]]
name = "sk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
sha2 = "0.10.0"
hex = "0.4.3"
openssl = "0.10.38"